--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <div class="sc-bdfBwQ eZNKTD">
                             <div class="sc-bdfBwQ sc-gsTCUz jgGrsq bhdLno">
                                 <div class="sc-bdfBwQ eZNKTD">
-                                    <img src="self-profile.jpeg" alt="Profile Image" data-testid="ProfileImage" filter="none" display="block" class="sc-iBPRYJ QFLjD"/>
+                                    <img src="./components/img/self-profile.jpeg" alt="Profile Image" data-testid="ProfileImage" filter="none" display="block" class="sc-iBPRYJ QFLjD"/>
                                 </div>
                                 <div class="sc-bdfBwQ llgrqs">
                                     <h1 class="sc-dlfnbm gDxZtD">Thiago William Poltronieri Araujo, Redes Sociais.</h1>
