--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Profiles | Thiago Poltronieri</title>
-        <link rel="shortcut icon" href="self-profile.ico" />
+        <link rel="shortcut icon" href="./components/img/self-profile.jpeg" />
         <link href="./styles/main.css" rel="stylesheet"/>  
         <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="5690b045-21d5-4e59-b645-9ec6a1430fbf";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
     </head>
