--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
-
         <meta name="google-site-verification" content="7qH-jOigCJgoqG-UDBcj8eznTp8YSP31RJ7esFa71-8" />
-        <meta name="description" content="Estas são as redes sociais mais usadas por Thiago Poltronieri" >
+        <meta name="description" content="Estas são as redes sociais mais usadas por Thiago William Poltronieri Araujo" >
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Profiles | Thiago Poltronieri</title>
         <link rel="shortcut icon" href="./components/img/self-profile.jpeg" />
-        <link href="./styles/main.css" rel="stylesheet"/>  
-        <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="5690b045-21d5-4e59-b645-9ec6a1430fbf";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
+        <link href="./styles/main.css" rel="stylesheet"/>
     </head>
     <body>
         <div id="__next">
@@ -28,7 +26,7 @@
                                     <img src="./components/img/self-profile.jpeg" alt="Profile Image" data-testid="ProfileImage" filter="none" display="block" class="sc-iBPRYJ QFLjD"/>
                                 </div>
                                 <div class="sc-bdfBwQ llgrqs">
-                                    <h1 class="sc-dlfnbm gDxZtD">Thiago William Poltronieri Araujo, Redes Sociais.</h1>
+                                    <h1 class="sc-dlfnbm gDxZtD">Thiago Poltronieri, Redes Sociais.</h1>
                                 </div>
                             </div>
                         </div>
