--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         })(window,document,'script','dataLayer','GTM-TPSV2FH');
         </script>
         <!-- End Google Tag Manager -->
+        <a class="discord-button" href="https://wa.me/5541992544292" target="_blank"> <img src="./components/img/logo_whatsapp.png" width="44" height="44"></a><style type="text/css">.discord-button:hover{transform: scale(1.2); transition-timing-function: cubic-bezier(0.47, 2.02, 0.31, -0.36);}a:active, a:hover{color: #ED4245; text-decoration: underline;}.discord-button{position: fixed; display: block; bottom: 0; margin: 24px; margin-bottom: 16px; transition-duration: 0.5s; -webkit-transition: all 0.3s; -o-transition: all 0.3s; transition: all 0.3s; transform: scale(1); z-index: 999;}a{background-color: transparent; text-decoration: none; color: #ED4245;}</style>
     </head>
     <body>
         <!-- Google Tag Manager (noscript) -->
