--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                     <img src="./components/img/self-profile.jpeg" alt="Profile Image" data-testid="ProfileImage" filter="none" display="block" class="sc-iBPRYJ QFLjD"/>
                                 </div>
                                 <div class="sc-bdfBwQ llgrqs">
-                                    <h1 class="sc-dlfnbm gDxZtD">Thiago Poltronieri, Redes Sociais.</h1>
+                                    <h1 class="sc-dlfnbm gDxZtD">Thiago Poltronieri, Redes Sociais</h1>
                                 </div>
                             </div>
                         </div>
