--- a/index.html
+++ b/index.html
@@ -84,13 +84,20 @@
                         <div class="sc-bdfBwQ pkAuV">
                             <div data-testid="StyledContainer" class="sc-bdfBwQ sc-ctaXAZ kPHwyq iRyVlM">
                                 <a href="https://thiagopoltronieri.com.br/blog/" target="_blank" rel="noopener noreferrer" data-testid="LinkButton" display="inline-flex" font-family="inherit" font-weight="inherit" font-size="inherit" height="auto" class="sc-pFZIQ sc-tYoTV fxPOXp exGbzQ">
-                                    <p class="sc-hKgILt fpenDC">Blog | Medium</p>
+                                    <p class="sc-hKgILt fpenDC">Medium</p>
                                 </a>
                             </div>
                         </div>
                         <div class="sc-bdfBwQ pkAuV">
                             <div data-testid="StyledContainer" class="sc-bdfBwQ sc-ctaXAZ kPHwyq iRyVlM">
-                                <a href="https://twitter.com/thiago_williamP" target="_blank" rel="noopener noreferrer" data-testid="LinkButton" display="inline-flex" font-family="inherit" font-weight="inherit" font-size="inherit" height="auto" class="sc-pFZIQ sc-tYoTV fxPOXp exGbzQ">
+                                <a href="https://www.tabnews.com.br/thiagopoltronieri" target="_blank" rel="noopener noreferrer" data-testid="LinkButton" display="inline-flex" font-family="inherit" font-weight="inherit" font-size="inherit" height="auto" class="sc-pFZIQ sc-tYoTV fxPOXp exGbzQ">
+                                    <p class="sc-hKgILt fpenDC">TabNews</p>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="sc-bdfBwQ pkAuV">
+                            <div data-testid="StyledContainer" class="sc-bdfBwQ sc-ctaXAZ kPHwyq iRyVlM">
+                                <a href="https://twitter.com/thpoltronieri" target="_blank" rel="noopener noreferrer" data-testid="LinkButton" display="inline-flex" font-family="inherit" font-weight="inherit" font-size="inherit" height="auto" class="sc-pFZIQ sc-tYoTV fxPOXp exGbzQ">
                                     <p class="sc-hKgILt fpenDC">Twitter</p>
                                 </a>
                             </div>
