--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Profiles | Thiago Poltronieri</title>
+        <link href="https://fonts.googleapis.com/css2?family=Karla:wght@300;400;600;700&amp;display=swap" rel="stylesheet"/>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&amp;display=swap" rel="stylesheet"/>
         <link rel="shortcut icon" href="./components/img/self-profile.jpeg" />
         <link href="./styles/main.css" rel="stylesheet"/>
+        <link href="./styles/whatsapp-button.css" rel="stylesheet">
         <!-- Google Tag Manager -->
         <script>
         (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -17,25 +20,13 @@
         })(window,document,'script','dataLayer','GTM-TPSV2FH');
         </script>
         <!-- End Google Tag Manager -->
-        <a class="discord-button" href="https://wa.me/5541992544292" target="_blank"> <img src="./components/img/logo_whatsapp.png" width="44" height="44"></a><style type="text/css">.discord-button:hover{transform: scale(1.2); transition-timing-function: cubic-bezier(0.47, 2.02, 0.31, -0.36);}a:active, a:hover{color: #ED4245; text-decoration: underline;}.discord-button{position: fixed; display: block; bottom: 0; margin: 24px; margin-bottom: 16px; transition-duration: 0.5s; -webkit-transition: all 0.3s; -o-transition: all 0.3s; transition: all 0.3s; transform: scale(1); z-index: 999;}a{background-color: transparent; text-decoration: none; color: #ED4245;}</style>
     </head>
+
     <body>
-        <!-- Google Tag Manager (noscript) -->
-        <noscript>
-            <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TPSV2FH"
-        height="0" width="0" style="display:none;visibility:hidden">
-            </iframe>
-        </noscript>
-        <!-- End Google Tag Manager (noscript) -->
-        <div id="__next">
-            <link href="https://fonts.googleapis.com/css2?family=Karla:wght@300;400;600;700&amp;display=swap" rel="stylesheet"/>
-            <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&amp;display=swap" rel="stylesheet"/>
-            <link href="https://fonts.googleapis.com/css2?family=Karla:wght@300;400;600;700&amp;display=swap" rel="stylesheet"/>
-            <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&amp;display=swap" rel="stylesheet"/>
-            <div class="sc-bdfBwQ sc-gsTCUz fGhsIW bhdLno">
-                <div class="sc-bdfBwQ sc-gsTCUz bcrzgk bhdLno">
-                    <div class="sc-bdfBwQ LyLIy">
-                        <div class="sc-bdfBwQ sc-fmlJLJ hjVNip bogOIu"></div>
+        <div class="sc-bdfBwQ sc-gsTCUz fGhsIW bhdLno">
+            <div class="sc-bdfBwQ sc-gsTCUz bcrzgk bhdLno">
+                <div class="sc-bdfBwQ LyLIy">
+                    <div class="sc-bdfBwQ sc-fmlJLJ hjVNip bogOIu"></div>
                         <div class="sc-bdfBwQ eZNKTD">
                             <div class="sc-bdfBwQ sc-gsTCUz jgGrsq bhdLno">
                                 <div class="sc-bdfBwQ eZNKTD">
@@ -46,6 +37,8 @@
                                 </div>
                             </div>
                         </div>
+
+                        <a class="whatsapp-button" href="https://wa.me/5541992544292" target="_blank"> <img src="./components/img/logo_whatsapp.png" width="44" height="44"></a>
                         
                         <div class="sc-bdfBwQ pkAuV">
                         <div class="sc-bdfBwQ sc-ctaXAZ kPHwyq iRyVlM" data-testid="StyledContainer">
@@ -152,14 +145,10 @@
                                 </a>
                             </div>
                         </div>
-
-
-                    </div>
                     </div>
                 </div>
             </div>
         </div>
-        
     </body>
 </html>
 
