--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 </div>
                 <div class="sc-bdfBwQ pkAuV">
                     <div data-testid="StyledContainer" class="sc-bdfBwQ sc-ctaXAZ kPHwyq iRyVlM">
-                        <a href="https://twitter.com/thpoltronieri" target="_blank" rel="noopener noreferrer"
+                        <a href="https://twitter.com/#" target="_blank" rel="noopener noreferrer"
                             data-testid="LinkButton" display="inline-flex" font-family="inherit" font-weight="inherit"
                             font-size="inherit" height="auto" class="sc-pFZIQ sc-tYoTV fxPOXp exGbzQ">
                             <p class="sc-hKgILt fpenDC">Twitter</p>
@@ -134,7 +134,7 @@
                 </div>
                 <div class="sc-bdfBwQ pkAuV">
                     <div data-testid="StyledContainer" class="sc-bdfBwQ sc-ctaXAZ kPHwyq iRyVlM">
-                        <a href="https://www.facebook.com/poltronieri.thiago" target="_blank" rel="noopener noreferrer"
+                        <a href="https://www.facebook.com/#" target="_blank" rel="noopener noreferrer"
                             data-testid="LinkButton" display="inline-flex" font-family="inherit" font-weight="inherit"
                             font-size="inherit" height="auto" class="sc-pFZIQ sc-tYoTV fxPOXp exGbzQ">
                             <p class="sc-hKgILt fpenDC">Facebook</p>
@@ -143,7 +143,7 @@
                 </div>
                 <div class="sc-bdfBwQ pkAuV">
                     <div data-testid="StyledContainer" class="sc-bdfBwQ sc-ctaXAZ kPHwyq iRyVlM">
-                        <a href="https://t.me/thiagopoltronieri" target="_blank" rel="noopener noreferrer"
+                        <a href="https://t.me/#" target="_blank" rel="noopener noreferrer"
                             data-testid="LinkButton" display="inline-flex" font-family="inherit" font-weight="inherit"
                             font-size="inherit" height="auto" class="sc-pFZIQ sc-tYoTV fxPOXp exGbzQ">
                             <p class="sc-hKgILt fpenDC">Telegram</p>
@@ -152,7 +152,7 @@
                 </div>
                 <div class="sc-bdfBwQ pkAuV">
                     <!-- <div data-testid="StyledContainer" class="sc-bdfBwQ sc-ctaXAZ kPHwyq iRyVlM">
-                        <a href="https://www.twitch.tv/thiago_williamp" target="_blank" rel="noopener noreferrer"
+                        <a href="https://www.twitch.tv/#" target="_blank" rel="noopener noreferrer"
                             data-testid="LinkButton" display="inline-flex" font-family="inherit" font-weight="inherit"
                             font-size="inherit" height="auto" class="sc-pFZIQ sc-tYoTV fxPOXp exGbzQ">
                             <p class="sc-hKgILt fpenDC">Twitch</p>
@@ -160,7 +160,7 @@
                     </div> -->
 
 
-                    <div class="sc-bdfBwQ pkAuV">
+                   <!-- <div class="sc-bdfBwQ pkAuV">
                         <div class="sc-bdfBwQ sc-ctaXAZ kPHwyq iRyVlM" data-testid="StyledContainer">
                             <p class="sc-hKgILt fpenDC"><a class="sc-pFZIQ sc-tYoTV fxPOXp exGbzQ"
                                     data-testid="LinkButton" display="inline-flex" font-family="inherit"
@@ -168,7 +168,7 @@
                                     href="https://aponta.social" rel="noopener noreferrer"
                                     target="_blank">aPonta</a></p>
                         </div>
-                    </div>
+                    </div>-->
 
                 </div>
                 <div class="sc-bdfBwQ pkAuV">
